customize.dist/src/less2/include/modals-ui-elements.less
@import (reference) "./colortheme-all.less";
@import (reference) "./variables.less";
.modals-ui-elements_main() {
    --LessLoader_require: LessLoader_currentFile();
}
& {
    .cp-spacer {
        height: @variables_padding;
    }
    // Share modal
    .msg.cp-inline-radio-group {
        overflow: unset !important;
        padding: 0px @variables_padding;
        .radio-group {
            display: flex;
            flex-direction: row;
            .cp-radio {
                margin-right: 30px;
            }
        }
    }

    // Properties modal
    .cp-app-prop {
        margin-bottom: 10px;
    }

    .cp-app-prop-content {
        color: @cryptpad_text_col;
    }

    // teams invite modal
    .cp-teams-invite-block {
        display: inline-flex;
        align-items: center;
        margin-bottom: 5px;
        span {
            flex: 1;
        }
    }
    .cp-teams-invite-message {
        resize: none;
    }
    .cp-teams-invite-alert {
        margin-top: 10px;
    }
    .cp-teams-invite-spinner {
        font-size: 1.2em;
        .fa {
            margin-right: 10px;;
        }
    }
    .cp-teams-help {
        color: @colortheme_logo-2;
        margin-left: 10px;
        &:hover {
            text-decoration: none;
        }
    }
}

